# django-cadence

./: .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  RELEASE_CHECKLIST.md  SECURITY.md  mypy.ini  pyproject.toml  pytest.ini  tox.ini
django_cadence/: __init__.py  apps.py  apps.pyi  dispatcher.py  dispatcher.pyi  scheduling.py  scheduling.pyi
django_cadence/management/commands/: runcadence.py
docs/: conf.py  index.rst  requirements.txt
tests/: conftest.py  settings.py  test_discover_events.py  test_runcadence.py
tests/celery_testapp1/: __init__.py  apps.py  tasks.py
tests/dramatiq_testapp1/: apps.py  tasks.py
tests/standalone_testapp1/: apps.py  tasks.py
