[tool.poetry]
name = "django-cadence"
version = "0.1.0"
description = "A package to provide periodic scheduled task support in Django"
authors = ["Dan Sloan <dan@luciddan.com>"]
maintainers = ["Dan Sloan <dan@luciddan.com>"]
license = "MPL-2.0"
readme = "README.md"
homepage = "https://github.com/LucidDan/django-cadence/"
repository = "git@github.com:LucidDan/django-cadence.git"
documentation = "https://django-cadence.rtfd.io/"
keywords = ["scheduling", "task", "periodic", "cron", "django"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Web Environment",
    "Framework :: Django :: 2.2",
    "Framework :: Django :: 3.0",
    "Framework :: Django :: 3.1",
    "Typing :: Typed"
]

[tool.poetry.urls]
issues = "https://github.com/LucidDan/django-cadence/issues"

[tool.poetry.dependencies]
python = "^3.6"
# Add 3.2 (LTS) as soon as it stabilizes
django = ">=2.2.0,<3.2"
# should be safe up to 4.0
apscheduler = ">=3.6.0,<4.0.0"
# Celery 5 known to include big changes, don't support it until we test
celery = { version = ">=4.4.0,<5.0.0", optional = true }
# Likewise, Dramatiq doesn't change much within minor versions, but caution may be needed when a 1.0 release drops
django_dramatiq = { version = ">=0.8.0,<1.0.0", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
pytest-cov = "^2.9.0"
pytest-django = "^3.9.0"
mypy = ">=0.770"
django-stubs = "^1.5.0"
black = "^19.10b0"
pytest-mock = "^3.1.1"
lxml = "^4.5.1"

[tool.poetry.extras]
dramatiq = ["django_dramatiq"]
celery = ["celery"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
